samples/_failures_safe/1761635955_62a17a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47478a12.c: In function ‘main’:
./samples/SAFE/__tmp_47478a12.c:157:17: error: expected declaration or statement at end of input
  157 |                 }
      |                 ^
./samples/SAFE/__tmp_47478a12.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47478a12.c:157:17: error: expected declaration or statement at end of input
